Fix a few spacing issues

--- a/Vaesen-dodgepong/vaesen.css
+++ b/Vaesen-dodgepong/vaesen.css
@@ -133,6 +133,12 @@ textarea.sheet-label {
     background-color: #efefef;
 }
 
+.sheet-marginless-section {
+  padding: 4px;
+  background-color: #efefef;
+  border: 1px #dddddd solid;
+}
+
 .sheet-usedbox {
     display: flex;
     align-items: center;
@@ -632,4 +638,7 @@ input.sheet-checkbox {
 }
 .sheet-colspace {
     margin-right: 8px; 
+}
+.sheet-colpad {
+    padding-right: 8px; 
 }
